# server_bee-backend

./: .dockerignore  .gitignore  .npmrc  CHANGELOG.md  Cargo.toml  README.md  README.zh-CN.md  config.yml  package.json  pnpm-lock.yaml  turbo.json
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  publish.yml  release.yml  rust-clippy.yml  test.yml
apps/hub/: .env.example  .eslintignore  .eslintrc.cjs  .prettierignore  env.js  middleware.ts  next.config.js  package.json  tailwind.config.ts  tsconfig.json
apps/hub/app/: layout.tsx  page.tsx
apps/hub/components/: copy-button.tsx  icons.tsx  s-tooltip.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx
apps/hub/config/: site.ts
apps/hub/constant/: github.ts  ws.ts
apps/hub/hooks/: useFilterServerList.ts  useHydrationStore.ts  useServerList.ts  useWebsocket.ts
apps/hub/lib/: fonts.ts  logging.ts  str.ts  unit.ts  utils.ts
apps/hub/prisma/: schema.prisma
apps/hub/server/: auth.ts  db.ts
apps/hub/store/: createSelectors.ts  index.tsx  networkHistory.ts  persist-store.tsx  record.ts  server.ts
apps/hub/styles/: globals.css
apps/hub/trpc/: react.tsx  server.ts  shared.ts
apps/hub/types/: nav.ts
apps/view/: .gitignore  index.html  package.json
apps/view/src/: const.ts  main.tsx
deploy/: Cargo.toml
deploy/locales/: app.yml
deploy/src/: cli.rs  config.rs  constant.rs  main.rs  storage_config.rs
docker/: .env.example  Caddyfile  Dockerfile  Dockerfile.hub  Dockerfile.interactor  Dockerfile.recorder  Dockerfile.web  docker-compose.yml
docker/dev/: Caddyfile  docker-compose.yml
http/: client.http  request.http
hub/: .eslintrc.cjs  env.js  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
hub/app/: layout.tsx  page.tsx
hub/app/dashboard/: layout.tsx  page.tsx
hub/app/server/: add-server.tsx  columns.tsx  data-table.tsx  layout.tsx  page.tsx  server-form.tsx
hub/components/: icons.tsx  main-nav.tsx  site-header.tsx  user-nav.tsx
hub/components/react-hook-form/: form.tsx
hub/components/ui/: button.tsx  label.tsx
hub/config/: site.ts
hub/constant/: default.ts
hub/prisma/: schema.prisma
hub/server/: auth.ts  db.ts
hub/server/api/: error.ts  root.ts  trpc.ts
hub/store/: index.tsx  user.ts
hub/styles/: globals.css
hub/trpc/: server.ts
interactor/: .env.example  Cargo.toml
interactor/src/: auth.rs  main.rs  ws.rs
interactor/src/constant/: db.rs  default_value.rs  endpoint.rs  env.rs
interactor/src/vo/: component.rs  disk.rs  formator.rs  fusion.rs  mod.rs  record.rs  result.rs  simple_process.rs
recorder/: .env  .env.example  Cargo.toml
recorder/src/: main.rs  mongo_helper.rs
recorder/src/constant/: db.rs  default_value.rs  env.rs  mod.rs
recorder/src/model/: component.rs  cpu.rs  device_info.rs  disk.rs  memory.rs  network.rs  overview.rs  process.rs  simple_process.rs  usage.rs  user.rs
recorder/src/vo/: component.rs  cpu.rs  device_info.rs  disk.rs  formator.rs  fusion.rs  invalid_token.rs  memory.rs  mod.rs  network.rs  overview.rs  process.rs  realtime_status.rs  record.rs  result.rs  simple_process.rs  usage.rs  user.rs
script/: dev.mjs  setup.sh  startup.sh  stop.mjs
src/: client.rs  config.rs  formator.rs  main.rs  server.rs  system_info.rs
src/model/: cpu.rs  disk.rs  formator.rs  mod.rs  network.rs  overview.rs  process.rs  realtime_status.rs
src/vo/: cpu.rs  disk.rs  formator.rs  fusion.rs  memory.rs  mod.rs  network.rs  overview.rs  process.rs  realtime_status.rs  usage.rs  user.rs
view/: .eslintrc.cjs  .prettierrc  README.md  const.ts  next.config.js  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  vite.config.ts
view/app/: globals.css  layout.tsx  page.tsx
view/app/login/: page.tsx
view/app/settings/: general-form.tsx  layout.tsx  page.tsx
view/app/token/: page.tsx
view/components/: icons.tsx  main-nav.tsx  recent-sales.tsx  s-tooltip.tsx  search.tsx  site-header.tsx  team-switcher.tsx  theme-provider.tsx  with_auth.tsx
view/components/activity/: cpu.tsx  network.tsx
view/components/process/: detail.tsx  list.tsx
view/components/ui/: badge.tsx  separator.tsx
view/components/widget/: cpu.tsx  disk.tsx  memory.tsx  network.tsx  os.tsx  overview.tsx
view/config/: site.ts
view/hooks/: useLoadingBtn.tsx  useSettings.ts  useToken.ts  useWebsocket.ts
view/lib/: route.ts  utils.ts
view/requests/: instance.ts  settings.ts  token.ts
view/src/: const.ts  error-page.tsx  globals.css  main.tsx
view/src/components/: icons.tsx  main-nav.tsx  recent-sales.tsx  s-tooltip.tsx  site-header.tsx  tailwind-indicator.tsx  team-switcher.tsx  theme-provider.tsx  theme-toggle.tsx  with_auth.tsx
view/src/config/: site.ts
view/store/: fusion.ts  history.ts  index.tsx  settings.ts  token.ts  ws.ts
view/types/: fusion.ts  result.ts  settings.ts
web/: Cargo.toml  README.md  README.zh-CN.md
web/db/: snap.0000000000000320
web/src/: cli.rs  config.rs  http_handler.rs  main.rs  report.rs  server.rs  system_info.rs
web/src/config/: app.rs  config.rs  constant.rs  mod.rs  server.rs  web_server.rs
web/src/db/: db_wrapper.rs  mod.rs
web/src/handler/: client_handler.rs  config_handler.rs  db_handler.rs  http_handler.rs  mod.rs  result.rs
web/src/model/: component.rs  device_info.rs  disk.rs  mod.rs  network.rs  process.rs  realtime_status.rs  simple_process.rs
web/src/pty/: mod.rs  pty_manager.rs  shell_type.rs
web/src/record/: constant.rs  mod.rs  recorder.rs
web/src/report/: client.rs  constant.rs  mod.rs  reporter.rs
web/src/route/: config_route.rs  local_route.rs  mod.rs  page_route.rs  pty_route.rs
web/src/test/: mod.rs  system_info_test.rs
web/src/token/: communication_token.rs  mod.rs
web/src/traits/: json_response.rs  mod.rs
web/src/utils/: common_util.rs  mod.rs  pty_util.rs
web/src/vo/: component.rs  cpu.rs  device_info.rs  formator.rs  fusion.rs  memory.rs  mod.rs  network.rs  overview.rs  process.rs  realtime_status.rs  result.rs  simple_process.rs  user.rs
web/src/vo/config/: app.rs  config.rs  mod.rs  server.rs  web_server.rs
(+233 files in other folders)
