[package]
name = "server_bee-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3"
bytestring = "1.1.0"

env_logger = "0.9"
futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
log = "0.4"
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"

sysinfo = "0.26.1"
systemstat = "0.2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.4"

anyhow = "1.0"