[package]
name = "serverbee-deploy"
version = "0.0.1"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
zip = "0.5.13"
daemonize = "0.4.1"
clap = { version = "4.0.11", features = ["derive"] }

port-killer = "0.1.0"

serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.4"