[package]
name = "serverbee-deploy"
version = "1.1.0"
edition = "2021"

[features]
subsystem = []

[dependencies]
log = "0.4"
log4rs = "1.2.0"

inquire = "0.5.2"

reqwest = { version = "0.11", features = ["json", "stream"] }
indicatif = "0.17.2"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
zip = "0.5.13"

clap = { version = "4.0.11", features = ["derive"] }

port-killer = "0.1.0"
port-selector = "0.1.6"

auto-launch = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.4"

[target.'cfg(not(windows))'.dependencies]
daemonize = "0.4.1"
