[package]
name = "interactor"
version = "0.1.0"
edition = "2021"
categories = ["web-programming::http-server", "visualization"]
keywords = ["serverbee", "web-server", "visualization", "monitor"]
homepage = "https://github.com/ZingerLittleBee/server_bee-backend"
repository = "https://github.com/ZingerLittleBee/server_bee-backend"
readme = "../README.md"

[dependencies]
actix-web = "4"
actix-web-actors = "4"
actix = "0"

dotenvy = "0.15.7"
log = "0.4.20"
env_logger = "0.10.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.107"

futures = "0.3.28"

tokio = {version = "1", features = ["full"]}

jsonwebtoken = "9.2.0"
futures-util = "0.3.28"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
