[package]
name = "serverbee-web"
version = "1.1.1"
edition = "2021"

[features]
subsystem = []

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3"
bytestring = "1.1.0"

clap = { version = "4.0.11", features = ["derive"] }

log = "0.4"
log4rs = "1.2.0"

futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
tokio = { version = "1.13.1", features = ["full"] }
tokio-stream = "0.1.8"

sysinfo = "0.27.5"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.4"

anyhow = "1.0"

[target.'cfg(not(windows))'.dependencies]
systemstat = "0.2.1"
