[package]
name = "serverbee-web"
version = "1.2.5"
edition = "2021"

[features]
subsystem = []
default = ["rustls-tls"]
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
actix = "0.13"
actix-codec = "0.5"
actix-rt = "2"
actix-web = "4"
actix-web-actors = "4.1"
awc = "3"
bytestring = "1.3.0"

clap = { version = "4.0.11", features = ["derive"] }

log = "0.4"
log4rs = "1.2.0"

futures-util = { version = "0.3.17", default-features = false, features = ["std", "sink"] }
tokio = { version = "1.24.2", features = ["full"] }
tokio-stream = "0.1.8"
tokio-util = "0.7.8"

sysinfo = "0.29.3"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.4"
serde_urlencoded = "0.7"

reqwest = { version = "0.11", features = ["json", "stream"], default-features = false }

anyhow = "1.0"

sled = "0.34.7"

async-trait = "0.1.52"
ezsockets = { version= "0.5.1", features = ["rustls"] }

[target.'cfg(not(windows))'.dependencies]
systemstat = "0.2.1"
